--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -18,8 +18,8 @@ window#waybar.bottom-bar {
 /*CUSTOM/ WAYBAR PLUGINS*/
 
 #custom-launcher{
-    color: #d462a6;
-    background-color: rgb(24, 24, 24);
+    color: #ffadde;
+    background-color: rgba(24, 24, 24, 0.0);
     border-radius: 100px;
     /*border: 1px solid;
     border-color: @light-blue;*/
@@ -30,8 +30,7 @@ window#waybar.bottom-bar {
 }
     
 #custom-power{
-
-    color: #a50062;
+    color: #bcd7ff;
     border-radius: 100px;
     /*border: 1px solid;
     border-color: @light-blue;*/
@@ -51,8 +50,8 @@ window#waybar.bottom-bar {
 }
 
 #custom-updater{    
-    background-color: rgb(24, 24, 24);
-    color: #d462a6;
+    background-color: rgba(24, 24, 24, 0.0);
+    color: #bcd7ff;
     border-radius: 100px;
     margin-left: 2px;
     margin-right: 2px;
@@ -66,8 +65,8 @@ window#waybar.bottom-bar {
 
 #custom-waybar-mpris{
 
-        background-color: #3c5066;
-        color: #e3e3e3;
+        background-color: rgba(24, 24, 24, 0.0);
+        color: #bcd7ff;
         border-radius: 100px;
         font-size: 14px;
         margin-left: 4px;
@@ -78,7 +77,7 @@ window#waybar.bottom-bar {
 }
 
 #custom-media{
-    color: #fddab6;
+    color: #bcd7ff;
 
     font-size: 14px;
     margin-left: 2px;
@@ -98,16 +97,16 @@ window#waybar.bottom-bar {
 }
 
 #custom-notification {
-    background-color: rgb(24, 24, 24);
-    color: #fddab6;
+    background-color: rgba(24, 24, 24, 0.0);
+    color: #bcd7ff;
     border-radius: 100px;
     margin-right: 2px;
     font-family: "NotoSansMono Nerd Font";
 }
 
 #custom-scratchpad_indicator {    
-    background-color: rgb(24, 24, 24);
-    color: #f58d59;
+    background-color: rgba(24, 24, 24, 0.0);
+    color: #bcd7ff;
     border-radius: 100px;
     /*border: 1px solid;
     border-color: @light-blue;*/
@@ -119,7 +118,7 @@ window#waybar.bottom-bar {
 
 /*DEFAULT WAYBAR PLUGINS*/
 #tray{
-    background-color: rgb(24, 24, 24);
+    background-color: rgba(24, 24, 24, 0.0);
     border-radius: 100px;
     /*border: 1px solid;
     border-color: @light-blue;*/
@@ -132,7 +131,7 @@ window#waybar.bottom-bar {
 #window{    
     /*border: 1px solid;
     border-color: @light-blue;*/
-    color:#e87abc;
+    color:#bcd7ff;
     font-size: 15px;
     margin-left: 2px;
     margin-right: 2px;
@@ -141,8 +140,8 @@ window#waybar.bottom-bar {
 }
 
 #battery{    
-    background-color: rgb(24, 24, 24);
-    color: #d462a6;
+    background-color: rgba(24, 24, 24, 0.0);
+    color: #bcd7ff;
     border-radius: 100px;
 
     /*border: 1px solid;
@@ -155,8 +154,8 @@ window#waybar.bottom-bar {
 }
 
 #clock{    
-    background-color: rgb(24, 24, 24);
-    color: #f58d59;
+    background-color: rgba(24, 24, 24, 0.0);
+    color: #bcd7ff;
     border-radius: 100px;
     font-size: 15px;
     /*border: 1px solid;
@@ -169,8 +168,8 @@ window#waybar.bottom-bar {
 }
 
 #pulseaudio{
-    background-color: rgb(24, 24, 24);
-    color: #ffd9b8;
+    background-color: rgba(24, 24, 24, 0.0);
+    color: #bcd7ff;
     border-radius: 100px;
     /*border: 1px solid;
     border-color: @light-blue;*/
@@ -183,8 +182,8 @@ window#waybar.bottom-bar {
 
 
 #taskbar{
-    background-color: rgb(24, 24, 24);
-    color: #ffd9b8;
+    background-color: rgba(24, 24, 24, 0.0);
+    color: #bcd7ff;
     font-size: 13px;
     border-radius: 100px;
     margin-left: 4px;
@@ -194,8 +193,8 @@ window#waybar.bottom-bar {
 }
 
 #taskbar{
-    background-color: rgb(24, 24, 24);
-    color: #ffd9b8;
+    background-color: rgba(24, 24, 24, 0.0);
+    color: #bcd7ff;
     font-size: 13px;
     border-radius: 100px;
     margin-left: 2px;
@@ -205,7 +204,7 @@ window#waybar.bottom-bar {
 }
 
 #taskbar button.active{    
-    background-color: rgb(24, 24, 24);
+    background-color: rgba(24, 24, 24, 0.0);
     color: #88ddff;
     border-radius: 100px;
     margin-left: 2px;
@@ -215,8 +214,8 @@ window#waybar.bottom-bar {
 }
 
 #taskbar button.minimized{
-    background-color: rgb(24, 24, 24);
-    color: #f7af78;
+    background-color: rgba(126, 126, 126, 0);
+    color: #3e4c62;
     border-radius: 100px;
     margin-left: 2px;
     margin-right: 2px;
@@ -229,7 +228,7 @@ window#waybar.bottom-bar {
 
 /*WORKSPACES PLUGINS*/
 #workspaces{    
-    background-color: rgb(24, 24, 24);
+    background-color: rgba(24, 24, 24, 0.0);
     border-radius: 100px;
     margin-left: 2px;
     margin-right: 2px;
@@ -242,10 +241,10 @@ window#waybar.bottom-bar {
 
 #workspaces button{
     font-size: 11.5px;
-    color: #ff9b55;}
+    color: #bcd7ff;}
 
 #workspaces button.visible{
-    background-color: #ff9b55;
+    background-color: #bcd7ff;
     border-radius: 100px;
     margin-left: 2px;
     margin-right: 2px;
@@ -253,7 +252,7 @@ window#waybar.bottom-bar {
     padding-right: 4px;
 
     font-size: 15px;
-    color: rgb(24, 24, 24);
+    color: rgba(24, 24, 24, 1);
 }
 
 #workspaces button.urgent{
