--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,24 +1,32 @@
-    *{border-radius: 4px; font-family: URW Gothic, Symbols Nerd Font mono; min-height: 15px;}
+    *{border-radius: 100px; font-family: URW Gothic, Symbols Nerd Font mono; min-height: 15px;}
 
 window#waybar.top-bar {
 /*    background: linear-gradient(to right, rgba(6, 23, 46, 0.377),rgba(16, 20, 23, 0.418));*/
-    background: rgba(10,10,10,0.2);
+    background: rgba(10,10,10,0.4);
     /*border-bottom: 1px solid;
     border-color: rgba(175,212,223,0.2);*/
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 2px;
+    padding-bottom: 2px;
     font-size: 16px;}
 window#waybar.bottom-bar {
     padding-left: 8px;
     padding-right: 8px;
-    background: rgba(10,10,10,0.2);
+    padding-top: 2px;
+    padding-bottom: 2px;
+
+    background: rgba(10,10,10,0.4);
     /*border-top: 1px solid;
     border-color: rgba(175,212,223,0.2);*/
+
     font-size: 16px;}
 
 
 /*CUSTOM/ WAYBAR PLUGINS*/
 
 #custom-launcher{
-    color: #ffadde;
+    color: #f9ac7f;
     background-color: rgba(24, 24, 24, 0.0);
     border-radius: 100px;
     /*border: 1px solid;
@@ -30,7 +38,7 @@ window#waybar.bottom-bar {
 }
     
 #custom-power{
-    color: #bcd7ff;
+    color: #eef5ff;
     border-radius: 100px;
     /*border: 1px solid;
     border-color: @light-blue;*/
@@ -49,9 +57,10 @@ window#waybar.bottom-bar {
     padding-right: 4px;
 }
 
+
 #custom-updater{    
     background-color: rgba(24, 24, 24, 0.0);
-    color: #bcd7ff;
+    color: #eef5ff;
     border-radius: 100px;
     margin-left: 2px;
     margin-right: 2px;
@@ -66,7 +75,7 @@ window#waybar.bottom-bar {
 #custom-waybar-mpris{
 
         background-color: rgba(24, 24, 24, 0.0);
-        color: #bcd7ff;
+        color: #eef5ff;
         border-radius: 100px;
         font-size: 14px;
         margin-left: 4px;
@@ -77,7 +86,7 @@ window#waybar.bottom-bar {
 }
 
 #custom-media{
-    color: #bcd7ff;
+    color: #eef5ff;
 
     font-size: 14px;
     margin-left: 2px;
@@ -98,15 +107,15 @@ window#waybar.bottom-bar {
 
 #custom-notification {
     background-color: rgba(24, 24, 24, 0.0);
-    color: #bcd7ff;
+    color: #eef5ff;
     border-radius: 100px;
     margin-right: 2px;
     font-family: "NotoSansMono Nerd Font";
 }
 
-#custom-scratchpad_indicator {    
+#custom-scratchpadindicator {    
     background-color: rgba(24, 24, 24, 0.0);
-    color: #bcd7ff;
+    color: #eef5ff;
     border-radius: 100px;
     /*border: 1px solid;
     border-color: @light-blue;*/
@@ -131,7 +140,7 @@ window#waybar.bottom-bar {
 #window{    
     /*border: 1px solid;
     border-color: @light-blue;*/
-    color:#bcd7ff;
+    color:#eef5ff;
     font-size: 15px;
     margin-left: 2px;
     margin-right: 2px;
@@ -141,7 +150,7 @@ window#waybar.bottom-bar {
 
 #battery{    
     background-color: rgba(24, 24, 24, 0.0);
-    color: #bcd7ff;
+    color: #eef5ff;
     border-radius: 100px;
 
     /*border: 1px solid;
@@ -155,7 +164,7 @@ window#waybar.bottom-bar {
 
 #clock{    
     background-color: rgba(24, 24, 24, 0.0);
-    color: #bcd7ff;
+    color: #eef5ff;
     border-radius: 100px;
     font-size: 15px;
     /*border: 1px solid;
@@ -169,7 +178,7 @@ window#waybar.bottom-bar {
 
 #pulseaudio{
     background-color: rgba(24, 24, 24, 0.0);
-    color: #bcd7ff;
+    color: #eef5ff;
     border-radius: 100px;
     /*border: 1px solid;
     border-color: @light-blue;*/
@@ -183,44 +192,33 @@ window#waybar.bottom-bar {
 
 #taskbar{
     background-color: rgba(24, 24, 24, 0.0);
-    color: #bcd7ff;
+    color: #eef5ff;
     font-size: 13px;
     border-radius: 100px;
-    margin-left: 4px;
-    margin-right: 4px;
-    padding-left: 4px;
-    padding-right: 4px;
-}
-
-#taskbar{
-    background-color: rgba(24, 24, 24, 0.0);
-    color: #bcd7ff;
-    font-size: 13px;
-    border-radius: 100px;
-    margin-left: 2px;
-    margin-right: 2px;
-    padding-left: 4px;
-    padding-right: 4px;
+    margin-left: 1px;
+    margin-right: 1px;
+    padding-left: 1px;
+    padding-right: 1px;
 }
 
 #taskbar button.active{    
     background-color: rgba(24, 24, 24, 0.0);
     color: #88ddff;
     border-radius: 100px;
-    margin-left: 2px;
-    margin-right: 2px;
-    padding-left: 4px;
-    padding-right: 4px;
+    margin-left: 1px;
+    margin-right: 1px;
+    padding-left: 1px;
+    padding-right: 1px;
 }
 
 #taskbar button.minimized{
     background-color: rgba(126, 126, 126, 0);
     color: #3e4c62;
     border-radius: 100px;
-    margin-left: 2px;
-    margin-right: 2px;
-    padding-left: 4px;
-    padding-right: 4px;
+    margin-left: 1px;
+    margin-right: 1px;
+    padding-left: 1px;
+    padding-right: 1px;
 }
 
 
@@ -241,10 +239,10 @@ window#waybar.bottom-bar {
 
 #workspaces button{
     font-size: 11.5px;
-    color: #bcd7ff;}
+    color: #eef5ff;}
 
 #workspaces button.visible{
-    background-color: #bcd7ff;
+    background-color: #eef5ff;
     border-radius: 100px;
     margin-left: 2px;
     margin-right: 2px;
